Bug 1434439 - Avoid stray capability requirement in StartCapture failure case. r=pehrsons

MozReview-Commit-ID: BEgnoOizMjt